added map toolbar

--- a/src/app/map/map-marker/map-marker.component.html
+++ b/src/app/map/map-marker/map-marker.component.html
@@ -22,6 +22,7 @@
 		<agm-info-window [disableAutoPan]="true">
 			<ul>
 				<li>{{parking.name}}</li>
+				<li>{{parking.availableSpacesCount}} / {{parking.spacesCount}}</li>
 			</ul>
 		</agm-info-window>
 	</agm-marker>
