--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,3 +1,4 @@
+<app-map-toolbar></app-map-toolbar>
 <agm-map
 	[latitude]="51.107883"
 	[longitude]="17.038538"
@@ -21,8 +22,3 @@
 	</div>
 
 </agm-map>
-<button (click)="filterTrucks()">Trucks</button>
-<button (click)="filterCars()">Cars</button>
-
-<button (click)="toggleParking()">Parking</button>
-<button (click)="togglePoi()">Point of Interest</button>
