--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,12 +1,13 @@
+@import "variables";
+
+html, body {
+	height: 100%;
+}
+
 body {
-	background: #f6f6f6;
+	background: $white;
+	margin: 0;
+	font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
-.map-container {
-	position: relative;
-	margin: 40px auto;
-	width: 80%;
-}
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
