moved database to firebase

--- a/src/app/map/components/map-toolbar/map-toolbar.component.html
+++ b/src/app/map/components/map-toolbar/map-toolbar.component.html
@@ -1,7 +1,7 @@
 <div class="map-toolbar">
 
 	<mat-form-field>
-		<mat-select [value]="'Wrocław'"
+		<mat-select [value]="'Warszawa'"
 					(selectionChange)="changeLocation($event)">
 			<mat-option [value]="'Warszawa'">
 				Warszawa
