--- a/src/app/map-objects/vehicles/components/vehicle-marker-info/vehicle-marker-info.component.html
+++ b/src/app/map-objects/vehicles/components/vehicle-marker-info/vehicle-marker-info.component.html
@@ -1,37 +1,43 @@
 <div class="marker-vehicle-info-content">
+	<div class="marker-vehicle-title">Informacje o pojeździe</div>
 	<ul>
-
 		<li>
-			<span>{{vehicle.name}}</span>
-			<mat-chip [title]="'numer'"
-					  [disableRipple]="true">
-				{{vehicle.sideNumber}}
-			</mat-chip>
-		</li>
+			<div class="marker-vehicle-basic-info">
+				<span class="marker-vehicle-name">{{vehicle.name}} {{vehicle.sideNumber}}</span>
 
-		<li>
-			<mat-progress-bar [value]="vehicle.battery"
-							  [bufferValue]="100"
-							  [color]="getProgressBarColor()">
-			</mat-progress-bar>
-
-			<mat-chip [title]="'zasięg'"
-					  [color]="getProgressBarColor()"
-					  [selected]="true"
-					  [disableRipple]="true">
-				{{vehicle.rangeKm}} km
-			</mat-chip>
-		</li>
-
-		<li title="rejestracja">
-			<span>{{vehicle.plates}}</span>
-			<mat-chip [color]="getVehicleStatusColor()"
-					  [selected]="true"
-					  [disableRipple]="true">{{getVehicleStatus()}}</mat-chip>
+				<mat-chip [color]="'primary'" title="Rejestracja">
+					{{vehicle.plates}}
+				</mat-chip>
+			</div>
 		</li>
 
 		<li *ngIf="vehicle.address">
-			ul. {{vehicle.address}}
+			<div class="marker-vehicle-street">
+				<span>ul. {{vehicle.address}}</span>
+
+				<mat-chip [color]="getVehicleStatusColor()"
+						  [selected]="true"
+						  [disableRipple]="true">{{getVehicleStatus()}}
+				</mat-chip>
+			</div>
+		</li>
+
+		<li>
+			<div>Poziom baterii:</div>
+			<div class="marker-vehicle-battery">
+				<mat-progress-bar [value]="vehicle.battery"
+								  [bufferValue]="100"
+								  [color]="getProgressBarColor()">
+				</mat-progress-bar>
+
+				<mat-chip [title]="'zasięg'"
+						  [color]="getProgressBarColor()"
+						  [selected]="true"
+						  [disableRipple]="true">
+					{{vehicle.rangeKm}} km
+				</mat-chip>
+			</div>
+
 		</li>
 
 	</ul>
